# pdocs

./: 404.html  CHANGELOG.md  LICENSE  README.md  index.html  pyproject.toml  sitemap.xml
CHANGELOG/: index.html
art/: logo_large.xcf
docs/contributing/: 1.-contributing-guide.md  4.-acknowledgements.md
docs/quick_start/: 1.-installation.md  2.-cli.md  3.-api.md
htmlcov/: index.html  pdocs___init___py.html  pdocs__version_py.html  pdocs_api_py.html  pdocs_cli_py.html  pdocs_defaults_py.html  pdocs_doc_py.html  pdocs_extract_py.html  pdocs_html_helpers_py.html  pdocs_logo_py.html  pdocs_render_py.html  pdocs_static_py.html  pdocs_version_py.html  pdocs_web_py.html  status.json  tests_modules_dirmod___init___py.html  tests_modules_index___init___py.html  tests_modules_index_index_py.html  tests_modules_index_two___init___py.html  tests_modules_one_py.html  tests_modules_submods___init___py.html  tests_modules_submods_three___init___py.html  tests_modules_submods_two_py.html  tests_onpath___init___py.html  tests_onpath_simple_py.html  tests_test_doc_py.html  tests_test_extract_py.html  tests_test_pdoc_py.html  tests_test_render_py.html  tests_test_static_py.html  tests_tutils_py.html
pdocs/: __init__.py  cli.py  defaults.py  doc.py  extract.py  html_helpers.py  render.py  static.py  web.py
pdocs.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pdocs/templates/: html_index.mako  index.html  text.mako
reference/pdocs/: index.html
scripts/: clean.sh  lint.sh  test.sh
search/: search_index.json
site/pdocs/: api.html  cli.html  defaults.html  doc.html  extract.html  html_helpers.html  index.html  logo.html  render.html  static.html
tests/: test_doc.py  test_extract.py  test_parse_docstring.py  test_pdoc.py  test_render.py  test_static.py
tests/docstring_parser/: example_google.py  example_numpy.py
tests/htmlcov/: index.html  status.json  (+29 more)
(+21 files in other folders)
