[tool.poetry]
name = "pdocs"
version = "0.1.2"
description = "A simple program and library to auto generate API documentation for Python modules."
authors = ["Timothy Crosley <timothy.crosley@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
Markdown = "^3.0.0"
Mako = "^1.1"
hug = "^2.6"

[tool.poetry.dev-dependencies]
mypy = "^0.720.0"
isort = "^4.3"
pytest = "^5.1"
pytest-cov = "^2.7"
flake8-bugbear = "^19.8"
bandit = "^1.6"
vulture = "^1.0"
safety = "^1.8"
black = {version = "^18.3-alpha.0", allows-prereleases = true}
pytest-mock = "^1.10"
ipython = "^7.7"
flake8 = "^3.7"

[tool.poetry.settings.virtualenvs]
in-project = "true"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
